--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -412,7 +412,7 @@ to its rotational axis). These twin suns </span>
 			<div class="section">
 				<span class="A-tv">Karn
 is probably the second planet in the system, and is only a few billion
-miles (could be SI or European "billion") from Gallifrey. </span><span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span><span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, </span><span class="A-alternate">who have mostly abandoned science. </span><span class="A-licensed">In ancient times the world might have been known as Winter. </span><span class="A-tv">The Sisterhood of the Flame </span><span class="A-audiobook">were founded by a group of Shobogans who fled Gallifrey during the Intuitive Revolution.</span><span class="A-licensed"> They have a secret portal that connects back to the Capitol on Gallifrey. </span><span class="A-game">The planet Sarn might later become known as Karn in the future. </span><span class="A-tv">Parts of Karn are covered in hexagonal crystalline rock formation. </span><span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span><span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. </span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.</span>
+miles (could be SI or European "billion") from Gallifrey. </span><span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span><span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, </span><span class="A-alternate">who have mostly abandoned science. </span><span class="A-licensed">In ancient times the world might have been known as Winter. </span><span class="A-tv">The Sisterhood of the Flame </span><span class="A-audiobook">were founded by a group of Shobogans who fled Gallifrey during the Intuitive Revolution.</span><span class="A-licensed"> They have a secret portal that connects back to the Capitol on Gallifrey. </span><span class="A-game">The planet Sarn might later become known as Karn in the future. Much of Karn is cliffs, rock stacks, and open&nbsp;</span><span class="A-tv">Parts of Karn are covered in hexagonal <span class="A-game">basalt-like</span> rock stack formations. </span><span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span><span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. </span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.&nbsp;</span><span class="A-game">Its possible that the planet had a much more plentiful ecosystem before the final battle of Morbius’ war.&nbsp;</span>
 			</div>
 			<div class="article" id="planet" style="padding-top: 130px; margin-top: -130px;">
 				<figure>
@@ -425,7 +425,7 @@ miles (could be SI or European "billion") from Gallifrey. </span><span class="A-
 				<div class="section">
 					<span class="A-tv">Gallifrey is the <span class="A-game">third</span> planet from the primary star. </span>
 					<span class="A-tv">Gallifrey is known as the Shining World <span class="A-licensed">(or Jewel)</span> of the Seven Systems. </span><span class="A-fanon">Depending on the season </span><span class="A-audiobook">Gallifrey appears from space, to be a brown and green snow capped planet. </span><span class="A-tv">Gallifrey's diameter is about 3 times that of Sol III (Earth).</span><span class="A-tv"> Despite this, the </span><span class="A-infinity">gravity, orbital radius,</span><span class="A-tv"> pressure, temperature, and oxygen levels are the same as Earth. As Gallifrey appears to have the exact same orbit as Alzarius </span>
-					<span class="A-fanon">it might be drawn farther from the sun every 50 years by other planets in the system.</span>
+					<span class="A-fanon">so its probably being drawn farther from the sun once every 50 years by another planet in the system.</span>
 				</div>
 				<figure>
 					<img src="images/pazithigallifreya.jpg" alt="Pazithi Gallifreya">
@@ -656,11 +656,11 @@ mountain. The </span>
 					</span>
 					<span class="A-tv"></span><span class="A-alternate"></span><span class="A-audiobook"><br> </span>
 				</div>
-				<div class="section">
+				<div class="section A-fanon">
 					<span class="A-audiobook">Gold has no special value on Gallifrey </span>
 					<span class="A-fanon">(indicating it is quite common?) </span>
 					<span class="A-audiobook"> The planet also has a significant amount of Gallifreyan Zinc which is one of the strongest metals in the universe.&nbsp;<span class="A-licensed">Madranite is fairly common as well.</span> </span>
-					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zeiton ore.</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon A-game"></span><span class="A-tv"><span class="A-game">The Arcadian Sector of</span></span><span class="A-tv"> Gallifrey is the only place in the cosmos where one can find white-point star diamonds.&nbsp;</span><span class="A-tv"><span class="A-game">These </span></span><span class="A-tv">Arcadian Diamonds the most expensive substance in the Galaxy. <span class="A-game">White Star diamonds are one of the stronest stones in the cosmos and can even
+					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zeiton ore.</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon A-game"></span><span class="A-tv"><span class="A-game"><span class="A-fanon">This Zeiton ore probably significantly accellerated evolution on the world by re-shaping the inhabitants morphic fields. </span>The Arcadian Sector of</span></span><span class="A-tv"> Gallifrey is the only place in the cosmos where one can find white-point star diamonds.&nbsp;</span><span class="A-tv"><span class="A-game">These </span></span><span class="A-tv">Arcadian Diamonds the most expensive substance in the Galaxy. <span class="A-game">White Star diamonds are one of the stronest stones in the cosmos and can even
 survive inside the vortex or entering a time lock.&nbsp;They have a
 complex celluar structure that allows them to be programmed <span class="A-fanon">to resonate with</span> a specific person's biodata.&nbsp; </span>Once inside the Vortex a properly progamed diamond will be drawn towards its target. Since they can be tracked
 						through time and space, they can be used as a beacon to pull things out of even the strongest of&nbsp;time locks.<br> </span>
@@ -801,7 +801,7 @@ nectar&nbsp;to create helium in&nbsp;their bellies, <span class="A-tv">they are 
 					<span class="A-audiobook">Fledershrews (bat-like, mushroom eaters, that are nearly extinct),</span>
 					<span class="A-audiobook">
 Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived
-if they are not killed, sometimes kept as pets), <span class="A-notbbc">Moss-Rats,</span> Vex (burrowing
+if kept safe, sometimes used as pets, short memories), <span class="A-notbbc">Moss-Rats,</span> Vex (burrowing
 animal), Gallifreyan Womprats (1 meter long rats with fifteen legs),
 Pig-Rats (which live in the Drylands), Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
 					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
@@ -839,11 +839,10 @@ are the first sentient humanoids to appear in the Universe. As such
 their morphic fields increase the chances of humanoids evolving on
 other planets. <span class="A-tv">These Gallifreyan
 							<span class="A-audiobook">Neanderthals</span> did not evolve from anything
-							<span class="A-audiobook">embarrassing</span> (like apes or monkeys). </span>
-						<span class="A-fanon">Given
+							<span class="A-audiobook">embarrassing</span> (like apes or monkeys).&nbsp;</span><span class="A-fanon">Given
 the vast similarities to Gallifrey and Alzarius its possible that they
 might have evolved from something similar to the Marshmen of that
-world. </span></span>
+world. &nbsp;Much of the Marshman's abilities could be explained by exposure to <span class="A-alternate">zeiton ore (which can be found on Gallifrey). </span></span></span>
 					<span class="A-audiobook">The Constructors of Destiny modify the Gallifreyan Neanderthals to fulfill their destiny. </span><span class="A-fanon">This </span><span class="A-tv">exposure to the Untempered Schism, over billions of years of evolution, allows the Gallifreyans to become sensitive to time </span><span class="A-audiobook">and
 its movement. A common side effect of a species living next to a
 wormhole over a few centuries is that the populace will develop psionic
