--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -292,9 +292,9 @@ Lords.) <span class="A-fanon">This might have involved </span>Gallifreyan psycho
 					</span>
 					<span class="A-fanon">Many Childeren recite prayers to the Time and her Sisters.<span class="A-audiobook"> </span></span>
 					<span class="A-tv">While in the nursery</span><span class="A-tv">, many learn to shuffle radiation out of their bodies by playing with Roentgen (or Rontgen) Bricks
-						<span class="A-licensed">and Blocks. </span>The spend almost all of their childhood learning to
+						<span class="A-licensed">and Blocks. </span>They spend almost all of their childhood learning to
 						<span class="A-game">repress their impulses and </span>focus on living a life of duty
-						<span class="A-game">and obedience. </span>
+						<span class="A-game">and obedience. <span class="A-audiobook"><span class="A-fanon">For this reason,</span> there are no playgrounds on modern Gallifrey.</span> &nbsp; </span>
 					</span>
 					<span class="A-tv">Novices at the wear long black and white gowns. </span>
 					<span class="A-game">Black and White robes appear to indicate Gallifreyans who are not currently aliened with a particular Chapter. </span>
@@ -360,8 +360,8 @@ will. </span> Death, Time, and Pain might be the dreams of Time Lords which leak
 				</div>
 				<div class="section">
 					<span class="A-audiobook">The religious institution of Gallifrey originally included the
-						<span class="A-notbbc">Black Council of </span>Cardinals, Priests,
-						<span class="A-tv"> Monks,</span> and Wardens of the Church - all led by the Supreme Pontiff of Time (the Time Pope). </span>
+						<span class="A-notbbc">Black Council of </span>Cardinals, <span class="A-fanon">Time</span> Priests,
+						<span class="A-tv"><span class="A-fanon">Time</span>&nbsp;Monks,</span> and Wardens of the Church - all led by the Supreme Pontiff of Time (the Time Pope). </span>
 					<span class="A-notbbc">Shortly after the anchoring of the Eye of Harmony </span>
 					<span class="A-audiobook">(several thousands of years before the Doctor) Gallifreyan law was changed so that Gallifreyan Religious Class no longer
 						had access to Time Travel, Time Lord genetic benefits, and could not serve on the Supreme Council. The High Council
@@ -382,7 +382,7 @@ will. </span> Death, Time, and Pain might be the dreams of Time Lords which leak
 					<span class="A-game">This will lead to the ultimate superiority of Good over Evil.</span><br><br><span class="A-audiobook">Time Lords have also been known to mention a Devil from time to time. The Time Lord mythology speaks of the Dark God
 						Valdemar who was destroy by the Old Ones. The battle to achieve this took centuries and is regarded as the biggest
 						war in Gallifreyan mythology. Following this all of the Old Ones vanished, and this is considered to be the 6th Greatest
-						mystery in the history of the Universe.</span><br><span class="A-audiobook"><br> </span>
+						mystery in the history of the Universe. The phrase Old Ones describes any long dead aliens who had immense powers. </span><br><span class="A-audiobook"><br> </span>
 				</div>
 				<div class="section">
 					<span class="A-audiobook">The Omniscate has been seen as an almost magical symbol for warding off evil and is placed on rooms and objects of great
@@ -421,9 +421,9 @@ whatever is written and performed can be manifested. </span>
 				<div class="section">
 					<span class="A-tv">There are nursery stories and rhymes from <span style="font-style: italic;" class="A-licensed">Lullabies for Time Tots</span></span><span class="A-tv A-licensed"><span class="A-licensed"></span><span class="A-licensed"> by Benncuiq III.</span></span><span class="A-tv"> These&nbsp;told of Rassilon, <span class="A-licensed">and his Ring of Immortality and included</span> </span><span class="A-tv"><span style="font-style: italic;" class="A-licensed">The </span><span style="font-style: italic;">Nursery Rhyme
 									</span><span class="A-licensed"><span style="font-style: italic;">of Rassilon's Tower</span>&nbsp;</span></span><span class="A-tv">which told of the Death Zone.</span><span class="A-licensed">&nbsp;</span><span class="A-audiobook">Some Gallifreyan bedtime stories claim excessive time travel causes dementia and hallucinatory schizophrenia.</span><span class="A-audiobook">&nbsp;<span class="A-licensed"></span>&nbsp;&nbsp;</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook"></span><span class="A-fanon"><span class="A-audiobook"></span></span> <span class="A-audiobook"></span><br><span class="A-audiobook"><span class="A-tv"><br></span></span><span class="A-audiobook">Their myths also speak of races of creatures that "wear the skins of men"
-(meaning aliens that look like Gallifreyans). </span><span class="A-audiobook"><span class="A-tv">Gallifreyan mythology has </span>lots to say about the Daleks and the Klade including <span class="A-tv">the fairytale <span style="font-style: italic;">The Emperor Dalek's New Clothes.</span></span></span><span style="font-style: italic;" class="A-audiobook"></span><span style="font-style: italic;" class="A-notbbc"> </span>
+(meaning aliens that look like Gallifreyans). </span><span class="A-audiobook"><span class="A-tv">Gallifreyan mythology has </span>lots to say about the Daleks and the Klade including <span class="A-tv">the fairytale <span style="font-style: italic;">The Emperor Dalek's New Clothes. </span><span class="A-audiobook">Their are dark fairy tales of the indestructable Melkur.</span></span></span><span class="A-audiobook"></span><span class="A-notbbc A-audiobook"> </span>
 					<span class="A-notbbc">Gallifreyan folk-tales speak of Gallifreyans abandoned and “raised” by humans. </span><span class="A-notbbc">These Gallifreyans are said to develop
-						amazing abilities and are ruled by their extreme passions.</span><br><br><span class="A-audiobook">The Story of the Rock is an old Gallifreyan fairy-tale designed to train time-tots of the dangers of curiosity and interference.
+						amazing abilities and are ruled by their extreme passions. </span><br><br><span class="A-audiobook">The Story of the Rock is an old Gallifreyan fairy-tale designed to train time-tots of the dangers of curiosity and interference.
 						In the story, two Time Lords are traveling in very hot desert filled with sand dunes. He finds a massive cube made
 						of red stone. Imprisoned against the rock is the Chained Man. He’s chained to the Rock with long rusty chains.
 						The Chained man is starved and thin with yellow pointed teeth and long hair. He begs the Time Lords come and look at
@@ -1977,8 +1977,8 @@ Shobogans became slang Gallifreyan <span class="A-audiobook">for 'new age' dropo
 							<li>
 								<span class="A-game">“The mouth of the Vortex” - probably a Time Lord expression similar to “tip of the iceberg. ”</span>
 							</li>
-							<li>
-								<span class="A-tv">"There are some corners of the Universe which have bred the most terrible things. Things which act against everything
+							<li><span class="A-audiobook">"The Old Ones" describes any long dead advanced aliens who had immense powers. </span>
+								<span class="A-tv"></span></li><li><span class="A-tv">"There are some corners of the Universe which have bred the most terrible things. Things which act against everything
 									we believe in. They must be fought." </span>
 								<span class="A-audiobook">- ancient child's maxim</span>
 							</li>
