--- a/rootimeline1.html
+++ b/rootimeline1.html
@@ -2296,9 +2296,9 @@ Non-human species will only be found on worlds where humans could not
 survive in the wild. &nbsp;During the Dark Times most species (such as
 the Racnoss, or the Qwerm) tended to be much more massive then later
 aliens that evolved in later eras. The Gallifreyans and Osirans were
-the rare exception to this rule. It is theorized that some universal
-physical constant is slowly reducing over time making larger sapient
-species less likely as time goes by. &nbsp;</span><br>&nbsp;&nbsp;</span>
+the rare exception to this rule. It is theorized that the continual decay of the
+<span class="A-fanon">gravitational</span> constant of the Universe is making larger sapient
+species less likely as time goes by. The Laima will fix the gravitational constant at a single value. &nbsp;</span><br>&nbsp;&nbsp;</span>
 				</span>
 				<span class="A-tv">&nbsp; &nbsp; &nbsp; &nbsp; Morphic fields
 					<span class="A-tv"> </span>
@@ -2358,10 +2358,10 @@ species less likely as time goes by. &nbsp;</span><br>&nbsp;&nbsp;</span>
 					<span class="A-game">&nbsp;<br><br><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; (millions, possibly billions of years before the
 time of the Doctor / before there were any Time Lords / before Rassilon
-/ after a stone ring was constructed around the )</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
+/ after a stone ring was constructed around the Schism)</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Seven 8 year
 old Gallifreyans are scarified to the Untempered Schism by the
-Sentinels of Post Time War era. Their artron energy becomes trapped on
+Sentinels of the Post Time War era. Their artron energy becomes trapped on
 the Earth.&nbsp; </span></span></span></span><p>
 				<span class="A-licensed">
 					<span class="A-fanon">-8,014,500&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (4250 years before hyper-drive)</span>
@@ -2376,9 +2376,7 @@ the Earth.&nbsp; </span></span></span></span><p>
 					<span class="A-game">&nbsp; </span>The early Gallifreyans had many wars, periods of regression, and periods of progress. </span><span class="A-licensed"><span class="A-fanon">Telepathy
 becomes common among Gallifreyans.&nbsp; Each city develops its own
 Academia to train these telepaths.&nbsp;The Academia's are run by
-Priests of the Menti Celesti. &nbsp;</span>
-				</span>
-				<span class="A-audiobook">The Menti Celesti are Gallifreyan Gods and are made up of Pain, Death, and Time
+Priests of the Menti Celesti. </span></span><span class="A-audiobook">The Menti Celesti are Gallifreyan Gods and are made up of Pain, Death, and Time
 					<span class="A-fanon">(aka</span> the daughter of the Timewyrm).&nbsp;</span><span class="A-audiobook">The Gallifreyan Gods have the following colors attributed to them:&nbsp; Red and Black for Pain, White for Death, and
 					a shifting Gray color for Time.&nbsp; Prayer to the gods is usually conducted by individuals in a privet setting.&nbsp;</span><span class="A-audiobook">The Menti Celesti</span>
 				<span class="A-notbbc">
@@ -2420,8 +2418,7 @@ Priests of the Menti Celesti. &nbsp;</span>
 						<span class="A-fanon">Astral</span>
 						Vortex. They could see the future of specific people, places, and species in amazing detail. Those women who
 						spent too much time with their minds in the Vortex, became disconnected and catatonic.&nbsp;</span>In the City of Prydos the Order of the Sisterhood gains such power and foresight that it comes to dominate the
-					cities of Gallifrey's southern continent. </span></span>
-				<br>
+					cities of Gallifrey's southern continent.</span></span><br>
 				<br>
 				<span class="A-licensed">??
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
@@ -2509,7 +2506,16 @@ this language. </span><br>
 							&nbsp;&nbsp;&nbsp; Gallifrey masters gunpowder</span>
 						<span class="A-game">
 							<span class="A-audiobook"> </span>and become a Level 3 society.
-							<br>
+							<br><br></span></span></span></span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook"><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; (the Gallifreyans are described a Primitive /
+Shobogans often cover long distances by walking / they seem to be familier with explosives / a few centuries after
+the beginning of the Rutan/Sontaran War from Starn's POV )</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; The Three Brothers Gruff: The brothers Carl, Meklan,
+and Naze Gruff are captured by the Sontaran (Kaveetch?) named Starn,
+who experiments on them to determine if Gallifrey can be easily
+conquered.&nbsp; The brothers kill Starn before he can make his report
+to the Sontaran Assessment Survey.&nbsp; This story becomes a popular
+fairytale told to time-tots. Given that Starn is at war with the Rutans <span class="A-notbbc">and has interacted with humans, </span><span class="A-fanon">it seems likely that he has been sent back in time to facilitate and invasion of time.</span></span></span></span></span><span class="A-tv A-fanon"><span class="A-audiobook"></span></span><span class="A-fanon">&nbsp;</span><br><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game">
 							<br>
 						</span>
 					</span>
@@ -2538,16 +2544,7 @@ this language. </span><br>
 						<span class="A-game">and become a Level 4 society. <br><br><span class="A-audiobook">??&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Gallifrey had
-an economy phase. </span><br><br><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (probably before
-first contact with aliens)<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Jak and the
-Wormhole: A boy named Jak stops the Nimon from invading Gallifrey with
-the help of an alien princess named Jahanna. Jahanna lives the rest of
-her life on Gallifey. This story becomes a popular fairytale told to
-time-tots.&nbsp; <br><br>??&nbsp;&nbsp;&nbsp;
+an economy phase. </span><br></span></span></span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><span class="A-licensed"><br>??&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (before making
 first contact with aliens)<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -2590,27 +2587,16 @@ for. This story becomes a popular fairytale told to time-tots. &nbsp;</span></sp
 &nbsp;The Gallifreyans develop manned space flight and interplanetary
 probes. <span class="A-licensed">&nbsp;They
 become a Level 5 society. &nbsp;Like all level 5 civilizations the
-believe that History is written by the victors.&nbsp; &nbsp; </span><br><br><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
+believe that History is written by the victors.&nbsp; &nbsp; <br></span></span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><br><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (when communicators and verbally
-programmable transporter ‘skimmers’ are available / before temporal
-manipulation of DNA<span class="A-fanon">-biodata </span>is possible)</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (probably before
+first contact with aliens / </span></span></span></span></span><span class="A-game"><span class="A-fanon">possibly when Tecteun leaves to find the Timeless Child) </span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><span class="A-licensed"><br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;Helana
-and the Beast: In order to free her father from the control of a
-beast-like creature, Helana agrees to live with the beast. She learns
-that the Beast had been exposed to and unstable time field which had
-regressed its body down the evolutionary line. The Doctor is able to
-provide a temporal antidote turns the beast back into a young man. This
-story becomes a popular fairytale told to time-tots.<br><br><span class="A-audiobook"></span></span></span></span><span class="A-game"><span class="A-fanon">-8,010,550? &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; </span></span><span class="A-game"><span class="A-game"><span class="A-licensed"><span class="A-audiobook">Gallifrey had several terrible wars before Unification under a single government was achieved.&nbsp; </span><br></span></span>
-				
-				<br>
-				<span class="A-fanon">-8,010,550&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (300 years before Hyper-drive)</span>
-				<br class="A-fanon">
-				<span class="A-fanon">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-					&nbsp;&nbsp;The first Pythia unifies the entire planet Gallifrey under her rule.&nbsp;</span></span><span class="A-audiobook">The Gallifreyans master their entire planet, making them a Type 1 Civilization. &nbsp;</span>
-			<br>
-			<p>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Jak and the
+Wormhole: A boy named Jak stops the Nimon from invading Gallifrey with
+the help of an alien princess named Jahanna. Jahanna lives the rest of
+her life on Gallifey. </span></span></span></span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><span class="A-licensed"></span></span></span></span></span><span class="A-game"><span class="A-fanon">The story of Jahanna arriving on Gallifrey might be a reference to the Timeless Child. &nbsp;</span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><span class="A-licensed">This story becomes a popular fairytale told to
+time-tots.&nbsp; <br></span></span></span></span></span><p>
 				<span class="A-game">
 					<span class="A-fanon">-8,010,650 &nbsp;
 					</span>&nbsp;
@@ -2622,6 +2608,18 @@ story becomes a popular fairytale told to time-tots.<br><br><span class="A-audio
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The
 Gallifreyans launch the first manned interstellar probe.</span>
+				</span>
+			</p><span class="A-game"><span class="A-game"><span class="A-licensed"><span class="A-audiobook"></span></span></span></span><span class="A-game"><span class="A-fanon">-8,010,550? &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; </span></span><span class="A-game"><span class="A-game"><span class="A-licensed"><span class="A-audiobook">Gallifrey had several terrible wars before Unification under a single government was achieved.&nbsp; </span><br></span></span>
+				
+				<br>
+				<span class="A-fanon">-8,010,550&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (300 years before Hyper-drive)</span>
+				<br class="A-fanon">
+				<span class="A-fanon">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+					&nbsp;&nbsp;The first Pythia unifies the entire planet Gallifrey under her rule.&nbsp;</span></span><span class="A-audiobook">The Gallifreyans master their entire planet, making them a Type 1 Civilization. &nbsp;</span>
+			<br>
+			<p>
+				<span class="A-game">
+					<span class="A-fanon"><br></span><span class="A-game"></span>
 				</span>
 			</p>
 			<p>
@@ -2971,7 +2969,7 @@ making them a Type 3 Civilization. <span class="A-game">The devastation of the o
 					</span>
 				</span>
 			</p>
-			<p style="text-align: left;">
+			<p>
 				<span class="A-tv">
 					<span class="A-fanon">-1,640,000&nbsp;&nbsp;&nbsp; (During the time of the 430rd Pythia / </span></span><span class="A-fanon"><span class="A-audiobook"><span class="A-notbbc"><span class="A-tv"><span class="A-licensed">during the Dark Times</span></span></span></span></span><span class="A-tv"><span class="A-fanon">)
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -2991,13 +2989,7 @@ making them a Type 3 Civilization. <span class="A-game">The devastation of the o
 				<span class="A-licensed">The Games are constantly going on and the Gallifreyans watch them</span>
 				<span class="A-licensed"> on their Public Access Channels.&nbsp;</span><span class="A-audiobook"><span class="A-tv">
 						<span class="A-audiobook">&nbsp;Some areas of the Death Zone can only be reached by going through unstable cave networks or going over very steep
-							mountains. &nbsp;(Possibly because of the force field) the sky above the Death Zone is blue.&nbsp;</span></span></span></p><p><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook"><span class="A-licensed">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (the Gallifreyans are described a Primitive )</span><br class="A-licensed"><span class="A-licensed">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; The Three Brothers Gruff: The brothers Carl, Meklan,
-and Naze Gruff are captured by the Sontaran (Kaveetch?) named Starn,
-who experiments on them to determine if Gallifrey can be easily
-conquered.&nbsp; The brothers kill Starn before he can make his report
-to the Sontaran Assessment Survey.&nbsp; This story becomes a popular
-fairytale told to time-tots.</span></span></span></span><span class="A-tv"><span class="A-audiobook"><br><br>??&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;(millennia before Rassilon is born)<br>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Higher Races <span class="A-fanon">(possibly the Old Ones, the Parallel Sect, and the Phaeron?)</span> begin a war against each other. Several galaxies are burned in this conflict.</span></span></p><span class="A-audiobook"></span>
+							mountains. &nbsp;(Possibly because of the force field) the sky above the Death Zone is blue.&nbsp;</span></span></span><br><span class="A-tv"><span class="A-audiobook"><br>??&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;(millennia before Rassilon is born)<br>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Higher Races <span class="A-fanon">(possibly the Old Ones, the Parallel Sect, and the Phaeron?)</span> begin a war against each other. Several galaxies are burned in this conflict.</span></span></p><span class="A-audiobook"></span>
 			<p>
 				<span class="A-audiobook">-10,000&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Logistomancer of
 					A32K foresees an Empire of&nbsp; Logic that lasts for 10,000 years.</span>
@@ -3305,8 +3297,19 @@ will be abandoned by the time of the 7th Doctor <span class="A-fanon">(probably 
 			<br>
 			<br>
 			<span class="A-notbbc">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Other has a vast estate right outside the Capitol.&nbsp;
-				It looked like a giant rose garden from 1913 AD Earth.&nbsp;
-			</span>
+				It looked like a giant rose garden from 1913 AD Earth. <br><br></span><span class="A-game"><span class="A-game"><span class="A-licensed">??&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (when communicators and verbally
+programmable transporter ‘skimmers’ are available / before temporal
+manipulation of DNA<span class="A-fanon">-biodata </span>is possible / </span></span></span><span class="A-game"><span class="A-fanon">possibly after the Timeless Child arrives on Gallifrey) </span></span><span class="A-game"><span class="A-game"><span class="A-licensed"><br></span><span class="A-licensed">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;Helana
+and the Beast: In order to free her father from the control of a
+beast-like creature, Helana agrees to live with the beast. She learns
+that the Beast had been exposed to and unstable time field which had
+regressed its body down the evolutionary line. The Doctor is able to
+provide a temporal antidote turns the beast back into a young man. </span></span></span><span class="A-game"><span class="A-fanon"><span class="A-fanon"><span class="A-game"><span class="A-licensed"></span></span></span></span></span><span class="A-game"><span class="A-fanon">The 'Doctor' figure might be a Timeless Child. </span></span><span class="A-game"><span class="A-game"><span class="A-licensed">This
+story becomes a popular fairytale told to time-tots.</span></span></span><span class="A-game"><span class="A-game"><span class="A-licensed"></span></span></span>
 			
 			<p class="A-licensed">
 				<span class="A-audiobook">??&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (before the Time Scaphes)
