--- a/rootimelord.html
+++ b/rootimelord.html
@@ -373,9 +373,11 @@ three directions). Do Time Lords have 4 dimensional vestibular sense
 						</li>
 						<li>
 							<span class="A-tv">Psychic Sense: </span><span class="A-game"><span class="A-audiobook">Artron energy&nbsp;</span></span><span class="A-game">echos</span><span class="A-game"><span class="A-audiobook"> are emited by all sapient beings, via their perception of the world around them crystalizing events.&nbsp;</span></span><span class="A-audiobook"></span><span class="A-game">The&nbsp;&nbsp;greater affect that a person is going to have on coming history the stronger the echos. </span><span class="A-audiobook"><span class="A-fanon">This alows them to measure a subjects approximate reality quotient </span></span><span class="A-fanon">(assuming
-								its not too low to detect)</span><span class="A-audiobook"><span class="A-fanon">. </span>As time sensitives, they can see a mist of slithery bockatrons hanging around other time travelers.</span><span class="A-game"> </span><span class="A-tv">They can read the last few moments of life from the artron imprint on a recently dead skull. </span><span class="A-audiobook">Residul
+								its not too low to detect)</span><span class="A-audiobook"><span class="A-fanon">. </span>As time sensitives, they can see a mist of slithery bockatrons hanging around other time travelers.</span><span class="A-game"> </span><span class="A-tv">They can read the last few moments of life from the artron imprint on a recently dead skull. </span><span class="A-audiobook">Residual
 psionic energy makes a Gallifreyan’s teeth itch. The older the energy,
-the stronger the itch. Some Time Lords have greater psionic sensitivity
+the stronger the itch. Particularly strong psionic residue triggers the
+parts of the brain (in humans and Gallifreyans) so that they smell
+candy-floss. fSome Time Lords have greater psionic sensitivity
 then others. Every Gallifreyan has a unique psycho-kinetic signature.
 This allows</span><span class="A-tv"> them to recognize each other even if they are wearing a new body. </span><span class="A-audiobook">Their
 telepathic intuition allows them to determine which people are
