--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>YOUTUBE PODCAST:</h2>
 			<div class="section">
-				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check it out, its filled with Time Lore goodness...
+				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check it out, its filled with Time Lore goodness.  All episodes at <a href="youtube.com/@rassilonomegaotherguy" target="_blank">youtube.com/@rassilonomegaotherguy</a> 
 					<br> 
 					<a href="https://youtu.be/8fQloEtOq6E" target="_blank">Ep 1: Auld Mortality</a> 
 					<br> 
@@ -223,6 +223,10 @@
 					<a href="https://youtu.be/FMoK2_pLjus" target="_blank">Ep 6: The Beginning</a> 
 					<br> 
 					<span class="A-fanon">A look at how the Doctor left Gallifrey, the Doctor Who audio 'The Beginning,' the reasons the Doctor left Gallifrey, the mystery of his original name, and the TARDIS Switch Room.</span>
+					<br> 
+					<a href="https://youtu.be/YNO0L9cN1kE" target="_blank">Ep 7: An Unearthly Woman</a> 
+					<br> 
+					<span class="A-fanon">A look at the audio 'An Unearthly Woman,' the Dr's time at 76 Totter's Lane, TARDIS Power Cells, and the identity of I.M. Foreman?</span>
 				</span>
 			</div>
 		</div>
